Adjust main container height to 100vh so there isn't white space below everything, fix alignment

--- a/frontend/public/stylesheets/footer.css
+++ b/frontend/public/stylesheets/footer.css
@@ -1,6 +1,6 @@
 .footer {
     background: #d0d0d0;
-    height: 50px;
+    height: 75px;
     display: flex;
     justify-content: center;
     align-items: center;
