--- a/frontend/public/stylesheets/leaderboard.css
+++ b/frontend/public/stylesheets/leaderboard.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     align-items: center;
     background: white;
-    margin: 10px;
+    margin: 10px 10px 0 10px;
 
     width: 300px;
     height: 630px;
